<resources>
    <string name="app_name">Pabili</string>
    <string name="congratulation">Congratulations</string>
    <string name="server_error">Can not connect to server! Please try again.</string>
    <string name="network_error">No internet connection, please connect your phone to wifi or data connection.</string>
    <string name="check_connection">Unable to make a connection with remote server. Either please check your internet connection or try after some time.</string>
    <string name="notificationid_validation">We are not getting Device Notification Id. Either please check your internet connection or try again.</string>
    <string name="url_missing">Whoops! Url is missing. Please check your internet connection then try again.</string>
    <string name="unknown_success">Whoops! unknown success parameter.</string>
    <string name="user_info_missing">Whoops! User info is missing. Please exit app then try again.</string>
    <string name="email_client_error">There are no email clients installed.</string>
    <string name="phone_error">Device does not support calling.</string>
    <string name="please_wait">Please wait …</string>
    <string name="appversion_validation">We are not getting Current Application Version. Please try again.</string>
    <string name="deviceid_validation">We are not getting Device Unique Id. Please try again.</string>
    <string name="support_error">Support information is not present.</string>
    <string name="retry">Try Again</string>
    <string name="reorder">Reorder</string>
    <string name="crop_action_error">Sorry! image is not cropped.</string>
    <string name="gallery_pick_error">Sorry! image is not picked from gallery. Please try again.</string>
    <string name="camera_capture_error">Sorry! image is not captured. Please try again.</string>
    <string name="crop_action_support">Sorry! your device doesn\'t support cropping action.</string>
    <string name="demo_text">Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making    it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney    College in Virginia, looked up one of the more obscure Latin words, consectetur,    from a Lorem Ipsum passage, and going through the cites of the word in classical</string>
    <string name="ok">Ok</string>
    <string name="getting_address">Getting Address...</string>
    <string name="please_enter_email">Please enter your email.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="please_enter_current_password">Please enter your current password.</string>
    <string name="please_enter_new_password">Please enter your new password.</string>
    <string name="please_confirm_password">Please confirm the password.</string>
    <string name="please_enter_valid_password">Password should be between 6-20 characters.</string>
    <string name="please_enter_confirm_password">Please enter your confirm password.</string>
    <string name="please_enter_valid_confirm_password">Please enter valid confirm password.</string>
    <string name="plz_accept_terms_">Please accept the terms and conditions.</string>
    <string name="your_confirm_pass_doesnot">Your password and confirm password does not match.</string>
    <string name="validation_title">Whoops!</string>
    <string name="please_enter_first_name">Please enter your name.</string>
    <string name="please_enter_last_name">Please enter your last name.</string>
    <string name="please_enter_mobile_number">Please enter contact number.</string>
    <string name="please_enter_landline_number">Please enter landline number.</string>
    <string name="please_enter_address">Please enter address.</string>
    <string name="please_enter_valid_mobile_number">Mobile number is not valid.</string>
    <string name="please_enter_county_code">Please enter country code.</string>
    <string name="please_enter_valid_county_code">Please enter valid country code.</string>
    <string name="Whoops">Whoops!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="please_select_drop_address">Please select drop-off address.</string>
    <string name="please_select_pick_address">Please select pickup address.</string>
    <string name="please_enter_item_desc">Please enter item description.</string>
    <string name="please_enter_item_quantity">Please enter item quantity.</string>
    <string name="please_select_deli_date">Please select delivery date.</string>
    <string name="please_select_deli_time">Please select delivery time.</string>
    <string name="please_enter_parcel_height">Please enter parcel height.</string>
    <string name="please_enter_parcel_weight">Please enter parcel weight.</string>
    <string name="please_enter_parcel_width">Please enter parcel width.</string>
    <string name="please_enter_parcel_length">Please enter parcel length.</string>
    <string name="please_enter_unit_no">Please enter unit number.</string>
    <string name="please_enter_house_no">Please enter house number.</string>
    <string name="please_enter_street_name">Please enter street name.</string>
    <string name="please_enter_street_number">Please enter street number.</string>
    <string name="please_enter_city_name">Please enter city.</string>
    <string name="please_enter_state_name">Please enter state.</string>
    <string name="please_enter_postcode">Please enter postcode.</string>
    <string name="please_enter_country_name">Please enter country.</string>
    <string name="please_select_vehicle">Please select vehicle.</string>
    <string name="please_select_dob">Please select date of birth.</string>
    <string name="please_select_gst">Please select GST.</string>
    <string name="please_enter_gst_no">Please enter GST number.</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number.</string>
    <string name="please_enter_vehicle_reg_number">Please enter vehicle registration number.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout_text">Are you sure to logout from app?</string>
    <string name="exit_text">Are you sure to exit from app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_record">No Record</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec.</string>
    <string name="home">Home</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="delivery">Deliveries</string>
    <string name="cur_delivery">Current Orders</string>
    <string name="near_by">Near By Deliveries</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="delivery_history">Orders History</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Signup</string>
    <string name="thanks_text">Thank you for connecting with us \n Using Delivery App</string>
    <string name="thanku_txt">Thank you for connecting with us</string>
    <string name="using_txt">using Delivery App</string>
    <string name="parchase_delevery_txt">Purchase delivery</string>
    <string name="forgot_pass_txt">Forgot Password ?</string>
    <string name="dont_account_txt">Don\'t have an account?</string>
    <string name="sign_uphere_txt">Sign Up Here</string>
    <string name="driver_reg_txt">Register as a Delivery Rider?</string>
    <string name="click_here_txt">Click Here</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="book">Book</string>
    <string name="tekephoto_txt">Take a photo</string>
    <string name="get_proof">Get Proof of Delivery</string>
    <string name="signature">Signature</string>
    <string name="photo">Photo</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="popup_title_txt">Pick&amp;Drop Rates</string>
    <string name="profileinfo_txt">Profile Info</string>
    <string name="personalinfo_txt">Personal Info</string>
    <string name="drofoffinfo_txt">Drop off Info</string>
    <string name="picupaddress_txt">Pickup address</string>
    <string name="addressdetail_txt">Address Detail</string>
    <string name="vehicledetail_txt">Vehicle Detail</string>
    <string name="item_detail_txt">Item detail</string>
    <string name="next_txt">NEXT</string>
    <string name="nextbooking_txt">NEXT BOOKING</string>
    <string name="signin_txt">SIGN IN</string>
    <string name="login_txt">LOGIN</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="contact_us">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="descri">Description</string>
    <string name="name">Name</string>
    <string name="otp_verify">Otp Verification</string>
    <string name="resend_code">Resend code</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_verification_code">Please enter the verification code send to</string>
</resources>