<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_new_bg">


        <RelativeLayout
            android:background="@color/bg_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:contentDescription="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/edit_logo_pabili" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/activity_margin_medium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/activity_margin_medium" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            style="@style/edit_text_login_style"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/guideline6"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/et_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_normal_"
            android:inputType="text"
            android:hint="@string/subject"
            android:autofillHints="@string/subject"
            style="@style/edit_text_login_style"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/et_name"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_normal_"
            android:inputType="textMultiLine"
            android:hint="@string/descri"
            style="@style/edit_text_login_style"
            android:lines="3"
            android:gravity="start"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/et_subject"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/activity_margin_large"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintTop_toBottomOf="@+id/et_desc"
            android:minHeight="0dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/yellow"
            android:fontFamily="@font/titillium_regular"
            android:textSize="@dimen/text_size_extra_normal"
            android:paddingTop="@dimen/text_padding"
            android:paddingBottom="@dimen/text_padding"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu_new"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/activity_margin_medium"/>


                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_regular"
                    android:text="@string/contact_us"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_extra_normal" />

            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


