<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_new_bg"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </RelativeLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_btn"
                android:layout_centerVertical="true"
                android:padding="@dimen/activity_margin_medium"/>


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_regular"
                android:text="@string/otp_verify"
                android:layout_centerInParent="true"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_extra_normal" />

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/activity_margin_medium"/>
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/app_bar"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/titillium_regular"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/verification_code"
                android:textAlignment="center"
                android:textColor="@color/white_color">

            </TextView>

            <TextView
                android:fontFamily="@font/titillium_regular"
                android:textSize="@dimen/_14sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enter_verification_code"
                android:textAlignment="center"
                android:textColor="@color/white_color">

            </TextView>

            <TextView
                android:layout_marginBottom="@dimen/_20sdp"
                android:id="@+id/tv_text_phone"
                android:fontFamily="@font/titillium_regular"
                android:textSize="@dimen/_14sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+63"
                android:textAlignment="center"
                android:textColor="@color/white_color">

            </TextView>


            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.pickanddrop.utils.OtpEditText
                    android:id="@+id/et_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:digits="1234567890"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="#ffffff"
                    android:text=""
                    android:textColorHint="@color/white_color"
                    android:textIsSelectable="false"
                    android:textSize="20sp"/>


                <Button
                    android:id="@+id/btn_verify_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_medium"
                    android:text="@string/verify_otp"
                    android:minHeight="0dp"
                    android:textStyle="bold"
                    android:background="@drawable/button_shape"
                    android:textColor="@color/yellow"
                    android:layout_marginTop="@dimen/text_margin_xlarge"
                    android:fontFamily="@font/titillium_regular"
                    android:textSize="@dimen/text_size_extra_normal"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding" />


                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_remain_time"
                    android:fontFamily="@font/titillium_regular"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text=" Time remaining 60s "
                    android:textColor="@color/white_color"
                    android:textAlignment="center"
                    >

                </TextView>


                <TextView
                    android:id="@+id/tv_resend_opt"
                    android:fontFamily="@font/titillium_regular"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white_color"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/resend_code"
                    android:textAlignment="center"
                    >

                </TextView>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
</layout>